Add labels and colors to the rendering settings YML files

--- a/rendering_settings/idr0079_membranes_lyso.yml
+++ b/rendering_settings/idr0079_membranes_lyso.yml
@@ -1,10 +1,14 @@
 ---
 channels:
     1:
+        label: lynEGFP
+        color: 00FF00
         active: true
         end: 150.0
         start: 5.0
     2:
+        label: lysotrackerdeepred
+        color: FF0000
         active: true
         end: 150.0
         start: 15.0
