--- a/rendering_settings/idr0079_membranes_recendo.yml
+++ b/rendering_settings/idr0079_membranes_recendo.yml
@@ -1,10 +1,14 @@
 ---
 channels:
     1:
+        label: lynEGFP
+        color: 00FF00
         active: true
         end: 150.0
         start: 1.0
     2:
+        label: mKate2rab11
+        color: FF0000
         active: true
         end: 75.0
         start: 1.0
