--- a/rendering_settings/idr0079_membranes_tgn.yml
+++ b/rendering_settings/idr0079_membranes_tgn.yml
@@ -1,10 +1,14 @@
 ---
 channels:
     1:
+        label: CDMPRtagRFPt
+        color: FF0000
         active: true
         end: 150.0
         start: 5.0
     2:
+        label: lynEGFP
+        color: 00FF00
         active: true
         end: 250.0
         start: 50.0
