--- a/rendering_settings/idr0079_membranes_transgolgi.yml
+++ b/rendering_settings/idr0079_membranes_transgolgi.yml
@@ -1,10 +1,14 @@
 ---
 channels:
     1:
+        label: b4galT1tagRFPt
+        color: FF0000
         active: true
         end: 100.0
         start: 2.0
     2:
+        label: lynEGFP
+        color: 00FF00
         active: true
         end: 250.0
         start: 30.0
